syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.vimalkeshu.replication.grpc.messages";
option java_outer_classname = "CommonMessageProto";

package common.message;

message Empty {}

message WorkerInfo {
  string id = 1;
  string host = 2;
  int32 port = 3;
}

enum TaskStatus {
    PENDING = 0;
    STARTED = 1;
    RUNNING = 2;
    FAILED = 3;
    COMPLETED = 4;
    RETRYING = 5;
}

message Task {
  string taskId = 1;
  string sourceCatalog = 2;
  string targetCatalog = 3;
  string source = 4;
  string target = 5;
  string delta = 6;
  string replicationType = 7;
  TaskStatus status = 8;
  int32 blockSize = 9;
  int32 totalRetry = 10;
}

message TaskInfo {
  string jobId = 1;
  Task task = 2;
  int32 attempt = 3;
}

enum JobStatus {
  pending = 0;
  started = 1;
  running = 2;
  failed = 3;
  completed = 4;
  retrying = 5;
  unknown = 6;
}

message Job {
  repeated Task tasks = 1;
  JobStatus jobStatus = 2;
}

message JobStatusInfo {
  string jobId = 1;
  JobStatus jobStatus = 2;
}

message JobIdInfo {
  string jobId = 1;
}

